# machapi

./: .gitignore  LICENSE  README.md  environments.py  pyproject.toml  requirements.txt  schema.json  schema.yaml  test_  test_ratecon_standalone.py
api/: __init__.py  celery.py  runner.py  urls.py
api/logconfig/formatters/: colorizer.py
api/mach_testcontainers/: __init__.py  base.py  postgres.py  rabbitmq.py  redis.py
api/settings/: __init__.py  ai_chat_server.py
api/settings/components/: auth.py  aws.py  base.py  celery.py  databases.py  gmail.py  logging.py  meilisearch.py  middleware.py  origins.py  redis.py  staticsettings.py  validators.py
api/settings/environments/: databases.development.py  databases.production.py  redis.development.py  redis.production.py
documentation/: celery_integration_testing.md  celery_production.md  celery_rescue_queue.md  multi_document_workflow_tests.md  ratecon_parsing_pipeline.md  ratecon_polling_guide.md
examples/: conversation.md
machtms/: apps.py  asgi.py  models.py  urls.py  wsgi.py
machtms/agents/: tests.py  tests_ratecon.py  toolkits.py
machtms/agents/chat/: __init__.py  client.py  controller.py  ui.py
machtms/agents/members/: __init__.py  carrier_assignment_agent.py  dispatcher.py  lead.py  load_creator.py  load_data_agent.py  load_parser.py  lookup_agent.py  planner.py  rate_con_processor.py  ratecon_load_creator.py  stop_builder.py
machtms/agents/models/: __init__.py  load_payload.py  ratecon_payload.py
machtms/agents/toolkit/: __init__.py  addresses.py  carriers.py  customers.py  document_parsing.py  loads.py  stops.py
machtms/backend/: __init__.py
machtms/backend/DocumentManager/: __init__.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
machtms/backend/GmailAPI/: __init__.py  models.py  serializers.py  tasks.py  urls.py  views.py
machtms/backend/RateConParser/: __init__.py  models.py  serializers.py  tasks.py  urls.py  views.py
machtms/backend/addresses/: __init__.py  manager.py  models.py  serializers.py  urls.py  views.py
machtms/backend/agents/: urls.py  views.py
machtms/backend/auth/: __init__.py  models.py  serializers.py  tests.py  urls.py  views.py
machtms/backend/carriers/: __init__.py  models.py  serializers.py  urls.py  views.py
machtms/backend/customers/: __init__.py  models.py  serializers.py  urls.py  views.py
machtms/backend/financials/: models.py
machtms/backend/legs/: __init__.py  models.py  openapi_doc.py  serializers.py  test_shipment_assignment.py  urls.py  utils.py  views.py
machtms/backend/loads/: __init__.py  models.py  openapi_doc.py  serializers.py  test_load_dashboard.py  urls.py  views.py
machtms/backend/routes/: __init__.py  models.py  openapi_doc.py  serializers.py  urls.py  views.py
machtms/core/: testing.py
machtms/core/auth/: __init__.py  authentication.py  contextdefault.py  permissions.py
machtms/core/base/: __init__.py  managers.py  mixins.py  models.py  serializers.py
machtms/core/celerycontroller/: README.md  __init__.py  controller.py  signals.py
machtms/core/envctrl/: __init__.py  controller.py  loader.py
machtms/core/factories/: __init__.py  addresses.py  carrier.py  customer.py  document_manager.py  leg.py  loads.py  ratecon.py  routes.py
machtms/migrations/: 0001_initial.py  0002_alter_shipmentassignment_leg_parsingsession_and_more.py  0003_address_place_name_carrier_mc_carrier_usdot_and_more.py  0004_remove_parsedratecon_add_fields_to_ratecondocument.py  0005_add_presigned_url_entry_point.py  0006_parsingsession_is_hidden.py  0007_load_is_contractor_load_trip_id.py
test_tools/: README.md  __init__.py  display.py  key_generator.py  requirements.md  test_discovery.py  test_runner.py
test_tools/tests/: __init__.py  test_discovery.py  test_key_generator.py  test_runner.py
(+190 files in other folders)
